# Phase-Curve-Anomaly-Detection

./: main.py  pyproject.toml
src/phase_curve_ad/data/: download.py  feature_extraction.py  pc_param_download.py
