[project]
name = "phase-curve-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alerce>=2.3.0",
    "datasets>=4.5.0",
    "fink-client>=11.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "light-curve[full]>=0.11.1",
    "lightning>=2.6.5",
    "pandas>=3.0.1",
    "pyod>=2.0.6",
    "python-dotenv>=1.2.1",
    "pyvo>=1.9.1",
    "requests>=2.32.5",
    "sbpy>=0.6.0",
    "scienceplots>=2.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]
